syntax = "proto3";

package order;

option go_package = "./proto";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse) {};
  rpc GetOrder (GetOrderRequest) returns (OrderResponse) {};
}

message CreateOrderRequest {
  string product_id = 1;
  int32 quantity = 2;
  string user_id = 3;
}

message GetOrderRequest {
  string order_id = 1;
}

message OrderResponse {
  string id = 1;
  string product_id = 2;
  int32 quantity = 3;
  string user_id = 4;
}
